* Rerunning the rbuilder initial setup no longer resets the internal password,
  as that caused previously created repositories to become unavailable. (RBL-3344)
* Failures while creating the product repository no longer result in a
  broken product being created. (RBL-3613)
* The rbuilder rAPA plugins now contain .pyc and .pyo files (RAA-1605)

Changes in 4.1.1
================

Web Front End Changes
---------------------

* The "Domain Name" field, which was removed from the "New Product"
  page in version 4.1.0, has been restored. (RBL-3037)

Bug Fixes
---------------------

* Extra troves such as anaconda-custom selected through the web
  interface are now properly included in builds. (RBL-3011)
* Custom troves with names other than the default can now be used
  in builds. (RBL-2957)
* Packages with names starting with "kernel" that are not named "kernel"
  will no longer be pinned by default in generated images. (RBL-3000)
* domU-flavored images based on rPath Linux 2 now have the correct root
  device label. (RBL-3036)
* Log files written by scripts such as outbound mirrors are now properly
  created after they are rotated. (RBL-3042)


Changes in 4.1.0
================

Web Front End Changes
---------------------

* New rBuilder installations are created using PostgreSQL as the repository
  database.  Existing installations are given a new plugin that will migrate
  existing SQLite repositories to PostgreSQL.  (RBL-2650)
* Upgrades from versions before 4.0.0 will no longer be possible with
  this version. Installations predating 4.0.0 will need to first
  be upgraded to version 4.0.1, then to this version. (RBL-2884)
* External products configured for inbound mirroring can now be backed
  up. (RBL-2039)
* "Projects" are now referred to as "products" in rBuilder Appliance.
  (RBL-1641)
* "Builds" are now referred to as "images". (RBL-2645)
* The form for creating new products has been updated to ask for the product